--- a/views/login.html
+++ b/views/login.html
@@ -1,8 +1,8 @@
-<div ng-controller='LogInCtrl'>
+<div ng-controller='LogInCtrl'> </div>
 <p>Please log in</p>
 
 <section class="row" ng-show="!authenticated">
-    <h1 class="naslov"> TimeKeeper </h1>
+    <h1 class="naslov"> FitAndHealthy </h1>
     <h3 class="col-md-12 text-center logintext">Login</h3>
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
         <form class="signin form-horitzontal" autocomplete="off">
@@ -41,47 +41,3 @@
         </form>
     </div>
 </section>
-
-<!--
-
-<div class="container login-container" ng-show="!authenticated">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading"> <strong class="">Login</strong>
-                </div>
-                <div class="panel-body">
-                    <form class="form-horizontal" role="form">
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">Name</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" id="name" placeholder="Name" required="required" type="text" ng-model="user.name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">Password</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" id="password" placeholder="Password" required="required" type="password" ng-model="user.pass">
-                                <a class="pull-right" href="#">Forgot password?</a>
-                            </div>
-                        </div>
-                        <div class="form-group checkbox">
-                            <div class="col-sm-offset-1 col-sm-9">
-                                <div class="checkbox">
-                                    <label class="">
-                                        <input class="pull-left" type="checkbox" ng-model="user.remember">Remember me</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group last">
-                            <div class="buttonHolder">
-                                <input type="submit" id="login-btn" class="btn btn-primary btn-md btn-block" value="Login" ng-click="identify(user)"/>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
--->
