--- a/views/main.html
+++ b/views/main.html
@@ -3,9 +3,33 @@
 
 {{cita}}
 
+
+    <div ng-show="!add" class="text-center form-group">
+        <input type="submit" class="btn btn-success btn-lg btn-block" value="+" ng-click="add=true"/>
+    </div>
+<div ng-show="add">
+    <form role="form">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input ng-model="program.name" type="name" class="form-control" id="name">
+        </div>
+        <div class="form-group">
+            <label for="description">Description:</label>
+            <textarea ng_model="program.description"  type="description" class="form-control" id="description">
+
+            </textarea>
+        </div>
+
+        <button ng-click="addProgram(program)" type="submit" class="btn btn-default">Add</button>
+        <button ng-click="add=false" class="btn btn-default">Cancel</button>
+    </form>
+</div>
+
     <ul ng-repeat="program in programs">
+        <li>{{program.Id}} <a href="#/programdetail/{{program.Id}}">Show</a> </li>
         <li>{{program.Name}}</li>
         <li>{{program.Description}}</li>
+        <button ng-click="deleteProgram(program.Id)" class="btn btn-danger">-</button>
     </ul>
 
 
