--- a/views/registrationView.html
+++ b/views/registrationView.html
@@ -5,7 +5,7 @@
 
             <form>
                 <p><input type="text" placeholder="Username" ng-model="edit.Username"></p>
-                <p><input type="text" placeholder="Password" ng-model="edit.Password"></p>
+                <p><input type="password" placeholder="Password" ng-model="edit.Password"></p>
                 <p><input type="text" placeholder="e-Mail" ng-model="edit.Email"></p>
             </form>
 
