kontroler i view za programe

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,3 +23,22 @@ body {
     margin-bottom: 60px;
 
 }
+.welcome{
+    font-size: 17px;
+}
+hr {
+    border: 0px none;
+    height: 3px;
+    background-image: linear-gradient(to right, white, #28649D, white);
+    margin-top: 43px;
+}
+.podnaslovi{
+    color: #337ab7;
+    margin-bottom: -29px;
+    margin-top: 8px;
+    margin-left: 21px;
+}
+.addBtn {
+    margin-right: 28px;
+    margin-top: -12px;
+}
