--- a/views/main.html
+++ b/views/main.html
@@ -1,36 +1,52 @@
 <div ng-controller="MainCtrl">
-<p>MAIN</p>
 
-{{cita}}
+    <h2 class="podnaslovi">Programs</h2>
 
+    <span ng-show="!add && authenticated" class="text-center form-group">
+        <input type="submit" class="btn btn-success btn-lg pull-right addBtn" value="Add program" ng-click="add=true"/>
+    </span>
 
-    <div ng-show="!add && $root.authenticated" class="text-center form-group">
-        <input type="submit" class="btn btn-success btn-lg btn-block" value="+" ng-click="add=true"/>
-    </div>
-<div ng-show="add">
-    <form role="form">
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <input ng-model="program.name" type="name" class="form-control" id="name">
+    <hr>
+
+    <div ng-show="add">
+        <form role="form">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input ng-model="program.name" type="name" class="form-control" id="name">
+            </div>
+            <div class="form-group">
+                <label for="description">Description:</label>
+                <textarea ng_model="program.description" type="description" class="form-control" id="description"> </textarea>
+            </div>
+
+            <button ng-click="addProgram(program)" type="submit" class="btn btn-default">Add</button>
+            <button ng-click="add=false" class="btn btn-default">Cancel</button>
+        </form>
         </div>
-        <div class="form-group">
-            <label for="description">Description:</label>
-            <textarea ng_model="program.description"  type="description" class="form-control" id="description">
 
-            </textarea>
-        </div>
-
-        <button ng-click="addProgram(program)" type="submit" class="btn btn-default">Add</button>
-        <button ng-click="add=false" class="btn btn-default">Cancel</button>
-    </form>
-</div>
-
+    <!--
     <ul ng-repeat="program in programs">
         <li>{{program.Id}} <a href="#/programdetail/{{program.Id}}">Show</a> </li>
         <li>{{program.Name}}</li>
         <li>{{program.Description}}</li>
         <button ng-show="$root.authenticated" ng-click="deleteProgram(program.Id)" class="btn btn-danger">-</button>
     </ul>
+    -->
+
+    <ol ng-show="!add">
+        <div ng-repeat="program in programs | orderBy: program.Name">
+            <li>
+                <a href="#/programdetail/{{program.Id}}">{{ program.Name}}</a>
+                <span ng-show="authenticated">
+                    <a ng-click="deleteProgram(program.Id)" href>
+                        <img src="images/dell.png">
+                    </a>
+                </span>
+                <p>{{program.Description}}</p>
+
+
+        </div>
+    </ol>
 
 
 <!--
