--- a/views/programDetail.html
+++ b/views/programDetail.html
@@ -1,7 +1,15 @@
 <div ng-controller="ProgramDetailCtrl">
 
-    <p>{{program.Name}}</p>
-    <p>{{program.Description}}</p>
+    <h2 class="podnaslovi">Program details</h2>
+
+    <hr>
+
+    <div>
+        <p>{{program.Name}}</p>
+        <p>{{program.Description}}</p>
+        <!-- dodati ostale detljae -->
+    </div>
+
 
     <div ng-show="!edit && $root.authenticated" class="text-center form-group">
         <input type="submit" class="btn btn-success btn-lg btn-block" value="Edit" ng-click="edit=true"/>
