--- a/views/programs.html
+++ b/views/programs.html
@@ -1,4 +1,4 @@
-<div ng-controller="MainCtrl" >
+<div ng-controller="ProgramCtrl" >
 
     <h2 class="podnaslovi">Programs</h2>
 
@@ -44,8 +44,6 @@
                     </a>
                 </span>
                 <p>{{program.Description}}</p>
-
-
         </div>
     </ol>
 
