--- a/views/programDetail.html
+++ b/views/programDetail.html
@@ -27,6 +27,61 @@
             </textarea>
             </div>
 
+            <div class="row">
+                <div class="form-group">
+                    <div class="searchable-container">
+                        <div class="items col-xs-5 col-sm-5 col-md-3 col-lg-3">
+                            <div class="info-block block-info clearfix">
+                                <div class="square-box pull-left">
+                                    <span class="glyphicon glyphicon-tags glyphicon-lg"></span>
+                                </div>
+                                <div data-toggle="buttons" class="btn-group bizmoduleselect">
+                                    <label class="btn btn-default">
+                                        <div class="bizcontent">
+                                            <input type="checkbox" name="var_id[]" autocomplete="off" value="">
+                                            <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
+                                            <h5>Coffee</h5>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="items col-xs-5 col-sm-5 col-md-3 col-lg-3">
+                            <div class="info-block block-info clearfix">
+                                <div class="square-box pull-left">
+                                    <span class="glyphicon glyphicon-tags glyphicon-lg"></span>
+                                </div>
+                                <div data-toggle="buttons" class="btn-group bizmoduleselect">
+                                    <label class="btn btn-default">
+                                        <div class="bizcontent">
+                                            <input type="checkbox" name="var_id[]" autocomplete="off" value="">
+                                            <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
+                                            <h5>Tea</h5>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="items col-xs-5 col-sm-5 col-md-3 col-lg-3">
+                            <div class="info-block block-info clearfix">
+                                <div class="square-box pull-left">
+                                    <span class="glyphicon glyphicon-tags glyphicon-lg"></span>
+                                </div>
+                                <div data-toggle="buttons" class="btn-group bizmoduleselect">
+                                    <label class="btn btn-default">
+                                        <div class="bizcontent">
+                                            <input type="checkbox" name="var_id[]" autocomplete="off" value="">
+                                            <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
+                                            <h5>Fruit Juice</h5>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <button ng-click="editProgram(program)" type="submit" class="btn btn-default">Save</button>
             <button ng-click="edit=false" class="btn btn-default">Cancel</button>
         </form>
