--- a/views/main.html
+++ b/views/main.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <h3 style="text-align:left; float:left"> Top Rated Exercises &nbsp;</h3>
-                <h6 style="margin-top:27px"><span class="label label-info"><a href="#/exercises">All</a></span></h6>
+                <h6 style="margin-top:27px"><span class="label label-info"><a href="#/exercis">All</a></span></h6>
             </div>
         </div>
 
