--- a/views/diets.html
+++ b/views/diets.html
@@ -4,19 +4,18 @@
 
     <hr>
 
-    <ol>
-        <div ng-repeat="diet in diets | orderBy: diet.Name">
-            <li>
+    <div class="row">
+        <div class="col-sm-12 col-xs-12 col-md-4 col-lg-4" ng-repeat="diet in diets">
+            <div class="thumbnail bootsnipp-thumb">
                 <a href="#/dietdetail/{{diet.Id}}">{{ diet.Name}}</a>
                 <p>{{diet.Description}}</p>
-            </li>
-            <button ng-show="!addToProgram" ng-click="addToProgram = true">Add to program</button>
-            <ul ng-show="addToProgram" ng-repeat="program in programs">
-               <a ng-click="AddDietToProgram(diet,program)"> <li>{{program.Name}}</li>
-                {{training.Name}}
-                </a>
-            </ul>
+                <button ng-show="!addToProgram" ng-click="addToProgram = true">Add to program</button>
+                <ul ng-show="addToProgram" ng-repeat="program in programs">
+                    <a ng-click="AddDietToProgram(diet,program)"> <li>{{program.Name}}</li>
+                        {{training.Name}}
+                    </a>
+                </ul>
+            </div>
         </div>
-    </ol>
-
+    </div>
 </div>
